item id changed to item name